@@ -1,3 +1,10 @@
+2009-04-04  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libfortran/39528
+	Backport from trunk.
+	* io/list_read.c (list_formatted_read_scalar): Move check for read
+	completion to just after the check for a repeated value.
+
 2009-01-24  Release Manager
 
 	* GCC 4.3.3 released.
